--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "mongoose": "^8.19.3",
     "next": "16.0.1",
     "react": "19.2.0",
